--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a",
   "main": "app.js",
   "scripts": {
-    "test": "a"
+    "test": "nodemon src/app.js",
+    "start": "node src/app.js"
+    
   },
   "repository": {
     "type": "git",
